--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ fastapi
 uvicorn
 pandas
 openpyxl
-ibm-cos-sdk          # ibm_boto3 / ibm-cos-sdk (si faltan paquetes en imagen)
 ibm_boto3
+ibm_botocore
 python-multipart
